--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,26 +1,23 @@
-@import 'vars';
-@import 'global';
-@import 'fonts';
+@import "vars";
+@import "global";
+@import "fonts";
 
-
-
-
-.header__top-inner{
+.header__top-inner {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 90px;
 }
 
-.header__text{
+.header__text {
   margin-left: auto;
   margin-right: 50px;
-  span{
-    color:$red;
+  span {
+    color: $red;
   }
 }
 
-.header__btn{
+.header__btn {
   padding: 4px;
   width: 72px;
   border-radius: 4px;
@@ -29,34 +26,87 @@
   font-size: 12px;
 }
 
-.header__btn-login{
+.header__btn-login {
   background-color: $green;
 }
 
-.header__btn-register{
+.header__btn-register {
   background-color: $red;
   margin-left: 7px;
 }
 
-.header__menu{
+.header__menu {
   background-color: $bg;
 }
 
-.menu{
+.menu {
   display: flex;
   align-items: center;
   height: 60px;
 }
 
-.menu__list{
-  li{
+.menu__list {
+  li {
     display: inline-block;
-    &+li{
+    & + li {
       margin-left: 30px;
     }
   }
-  a{
+  a {
     color: white;
     font-size: 14px;
+  }
+}
+
+.search {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 533px;
+}
+
+.search__inner {
+  padding: 155px 0 100px;
+  color: white;
+  text-align: center;
+  &-title {
+    margin-bottom: 10px;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 72px;
+  }
+  &-text {
+    margin-bottom: 50px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+  }
+}
+
+.search__inner-form {
+  max-width: 670px;
+  margin: 0 auto;
+  position: relative;
+  input {
+    display: block;
+    width: 100%;
+    height: 56px;
+    box-shadow: 0px 1px 10px 0px rgba(124, 178, 64, 0.75);
+    border-radius: 4px;
+    border: none;
+    font-size: 14px;
+    font-weight: 500;
+    padding: 0 60px 0 25px;
+    &::placeholder{
+      color: #90a4ae;
+      font-weight: 500;
+    }
+  }
+  button{
+    position: absolute;
+    border: none;
+    background-color: transparent;
+    right: 20px;
+    top: 16px;
   }
 }
