--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,9 @@
 @import "global";
 @import "fonts";
 
+/* Header
+================================= */
+
 .header__top-inner {
   display: flex;
   justify-content: space-between;
@@ -58,6 +61,9 @@
   }
 }
 
+/* Search
+================================= */
+
 .search {
   background-repeat: no-repeat;
   background-size: cover;
@@ -97,12 +103,12 @@
     font-size: 14px;
     font-weight: 500;
     padding: 0 60px 0 25px;
-    &::placeholder{
+    &::placeholder {
       color: #90a4ae;
       font-weight: 500;
     }
   }
-  button{
+  button {
     position: absolute;
     border: none;
     background-color: transparent;
@@ -110,3 +116,123 @@
     top: 16px;
   }
 }
+
+/* Product
+================================= */
+
+.product {
+  padding: 110px 0;
+  background-color: $grey;
+}
+
+.products__inner-btn {
+  text-align: center;
+  margin-bottom: 60px;
+  button {
+    padding: 12px 21px;
+    border: none;
+    background-color: #fff;
+    color: $bg;
+    cursor: pointer;
+    & + button {
+      margin-left: 5px;
+    }
+    &.mixitup-control-active{
+      background-color: $red;
+      color: white;
+      outline: none;
+    }
+  }
+}
+
+.products__inner-box{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.product__item {
+  max-width: 442px;
+  width: 100%;
+  box-shadow: 0px 1px 2px 0px rgba(205, 214, 222, 0.75);
+  margin-bottom: 30px;
+  &-img {
+    display: block;
+    min-height: 250px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  &-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 30px;
+    min-height: 90px;
+    font-weight: 500;
+    border-bottom: 1px solid #e7ecf2;
+  }
+  &-name {
+    max-width: 310px;
+  }
+  &-title {
+    color: $bg;
+    font-size: 18px;
+    display: block;
+  }
+  &-category {
+    display: block;
+    font-size: 14px;
+    color: $green;
+  }
+  &-price {
+    font-size: 20px;
+    color: $bg;
+    font-weight: 700;
+  }
+  &-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 70px;
+    padding: 10px 30px;
+  }
+  &-author {
+    display: flex;
+    align-items: center;
+    .avatar {
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      margin-right: 14px;
+      border-right: 50%;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+    span{
+      font-size: 14px;
+      font-weight: 500;
+    }
+  }
+}
+
+.products__bottom-btn{
+  text-align: center;
+  button{
+    margin: 45px 5px 0;
+    box-shadow: 0px 1px 3px 0px rgba(204, 216, 228, 0.75);
+    border: none;
+    background-color: #fff;
+    color: $bg;
+    padding: 20px 30px;
+    cursor: pointer;
+    &.mixitup-control-active{
+      background-color: $red;
+      color: white;
+      outline: none;
+    }
+  }
+  
+}
+
