--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -25,6 +25,15 @@
     -moz-osx-font-smoothing: grayscale;
   }
   
+  .icon-search:before {
+    content: "\f002";
+  }
+  .icon-th-large:before {
+    content: "\f009";
+  }
+  .icon-th-list:before {
+    content: "\f00b";
+  }
   .icon-map-marker:before {
     content: "\f041";
   }
@@ -33,6 +42,12 @@
   }
   .icon-phone:before {
     content: "\f095";
+  }
+  .icon-sort:before {
+    content: "\f0dc";
+  }
+  .icon-unsorted:before {
+    content: "\f0dc";
   }
   .icon-bolt:before {
     content: "\f0e7";
@@ -45,5 +60,8 @@
   }
   .icon-location-arrow:before {
     content: "\f124";
+  }
+  .icon-sort-amount-desc:before {
+    content: "\f161";
   }
   
