--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -813,6 +813,7 @@
     border: none;
     font-size: 16px;
     color: #90a4ae;
+    outline: none;
     &.active {
       color: #8bc34a;
     }
@@ -846,6 +847,7 @@ button.icon-unsorted {
   .product__item {
     max-width: 270px;
     background-color: #fff;
+    transition: all 0.5s;
   }
   .product__item-img {
     min-height: 180px;
@@ -871,6 +873,7 @@ button.icon-unsorted {
 .product-page__items {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   margin-bottom: 30px;
 }
 
@@ -896,6 +899,91 @@ button.icon-unsorted {
     &.active {
       background-color: #e74c3c;
       color: white;
+    }
+  }
+}
+
+.product__item-text {
+  display: none;
+}
+
+.product__item-price {
+  span {
+    display: none;
+  }
+}
+
+.product__item-list {
+  display: none;
+  .icon-comment-o,
+  .icon-heart-o {
+    display: inline-block;
+    font-size: 12px;
+    color: #b0bec5;
+    padding-left: 50px;
+    border-left: 1px solid #aeb4bb;
+    position: relative;
+    span {
+      @include f500;
+      color: $bg;
+    }
+    &::before{
+      font-size: 16px;
+      color: $green;
+      position: absolute;
+      left: 20px;
+      top: 0;
+    }
+  }
+  .icon-comment-o{
+    padding-right: 30px;
+    &::before{
+      top: -2px;
+    }
+  }
+}
+
+.product__item {
+  &.list {
+    max-width: 100%;
+    &:hover{
+      box-shadow: 0 16px 20px rgba(216, 216, 216, 0.75);
+    }
+    .product__item-img {
+      width: 240px;
+      float: left;
+      min-height: 100%;
+    }
+    .product__item-text {
+      display: block;
+      color: #70838d;
+      font-size: 14px;
+      font-weight: 400;
+      margin: 15px 0 5px;
+    }
+    .product__item-price {
+      font-size: 30px;
+      span {
+        display: block;
+        color: #aeb4bb;
+        font-size: 13px;
+        font-weight: 400;
+        margin-top: 15px;
+      }
+
+      .product__item-name {
+        max-width: 480px;
+      }
+    }
+    .product__item-content {
+      padding-top: 23px;
+    }
+    .product__item-list {
+      display: block;
+    }
+    .product__item-star {
+      margin-left: auto;
+      margin-right: 30px;
     }
   }
 }
