--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -33,9 +33,290 @@
   background-color: $green;
 }
 
-.header__btn-register {
+.header__btn-register,
+.header__btn-logout {
   background-color: $red;
   margin-left: 7px;
+}
+
+.header__circle {
+  & {
+    display: block;
+  }
+  display: none;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  background-color: #f5f5f5;
+  position: relative;
+  &::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #a0a0a0;
+    font-size: 14px;
+  }
+
+  span {
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 18px;
+    right: -7px;
+    top: -7px;
+    font-size: 11px;
+    color: white;
+  }
+}
+
+.header__box {
+  display: flex;
+  align-items: center;
+}
+
+.notification {
+  span {
+    background-color: #fcb322;
+  }
+}
+
+.message {
+  span {
+    background-color: #ef6c00;
+  }
+}
+
+.basket {
+  span {
+    background-color: #95c85a;
+  }
+}
+
+.header__btn-login--off {
+  display: none;
+}
+
+.header__btn-logout {
+  display: none;
+  &.header__btn-login--on {
+    display: block;
+  }
+}
+
+.user {
+  margin-left: 20px;
+  margin-right: 25px;
+  padding-right: 20px;
+  position: relative;
+  &::before {
+    position: absolute;
+    content: "\f107";
+    font-family: "icomoon";
+    width: 9px;
+    height: 6px;
+    color: #707070;
+    font-size: 16px;
+    font-weight: 400;
+    top: 0;
+    right: 0;
+  }
+  &__inner {
+    display: flex;
+    align-items: center;
+  }
+  &__images {
+    margin-right: 15px;
+    width: 34px;
+    height: 34px;
+    overflow: hidden;
+    border-radius: 50%;
+  }
+  &__info {
+    font-size: 14px;
+    line-height: 24px;
+  }
+
+  &__name {
+    color: #222222;
+    font-weight: 500;
+  }
+
+  &__money {
+    color: #8bc34a;
+    font-weight: 700;
+  }
+}
+.user__menu {
+  position: absolute;
+  top: 69px;
+  left: 20px;
+  border: 0px solid #cccccc;
+  background-color: #ffffff;
+  padding: 0 20px;
+  width: 158px;
+  transition: all 0.5s;
+  height: 0;
+  overflow: hidden;
+  a {
+    color: #546e7a;
+    font-size: 12px;
+    font-weight: 400;
+    margin-bottom: 15px;
+  }
+}
+
+.circle__menu {
+  position: absolute;
+  top: 69px;
+}
+
+.user__box,
+.basket__box,
+.notification__box,
+.message__box {
+  position: relative;
+  margin-top: 40px;
+  height: 90px;
+  &:hover {
+    .circle__menu {
+      border: 1px solid #cccccc;
+    }
+    .user__menu {
+      height: auto;
+      border: 1px solid #cccccc;
+      padding: 20px;
+      overflow: auto;
+    }
+  }
+}
+
+.circle__menu {
+  border: 0px solid #e0e0e0;
+  top: 62px;
+  right: 0;
+  transition: all 0.5s;
+  height: 0;
+  overflow: hidden;
+}
+
+.basket__box,
+.notification__box,
+.message__box {
+  margin-top: 54px;
+  margin-left: 15px;
+  &:hover {
+    .header__circle::before {
+      color: $bg;
+    }
+    .circle__menu {
+      height: auto;
+      overflow: hidden;
+    }
+    .circle__item {
+      padding: 23px;
+      border-width: 1px;
+    }
+  }
+}
+
+.circle__item {
+  background-color: white;
+  border: 0px solid #e0e0e0;
+  border-top: none;
+  padding: 0 23px;
+  display: flex;
+  align-items: center;
+  transition: all 0.3s;
+  border-left-width: 1px;
+  border-right-width: 1px;
+  width: 269px;
+  position: relative;
+  &::before {
+    position: absolute;
+    top: 27px;
+    right: 28px;
+    color: #b0bec5;
+    font-size: 16px;
+  }
+}
+.circle__images {
+  margin-right: 15px;
+}
+.circle__info {
+  &-name {
+    color: #263238;
+    font-weight: 500;
+  }
+  &-theme {
+    color: #84b743;
+    font-size: 12px;
+    font-weight: 400;
+  }
+  &-price {
+    color: #000000;
+    font-size: 16px;
+    font-weight: 500;
+  }
+  &-date {
+    color: #707070;
+    font-family: Roboto;
+    font-size: 10px;
+    font-weight: 400;
+  }
+}
+
+.basket__summ {
+  padding: 16px 14px 12px;
+  border: 1px solid #e0e0e0;
+  border-top: none;
+  background-color: #fff;
+}
+.basket__summ-title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 13px;
+  padding-right: 32px;
+  margin-bottom: 15px;
+  color: #263238;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.basket__btn {
+  color: #f4f6f5;
+  font-size: 14px;
+  font-weight: 700;
+  padding: 6px 5px;
+  background-color: #8bc34a;
+  text-align: center;
+  width: 105px;
+}
+
+.basket__btn-checkout {
+  width: 123px;
+  background-color: #e85647;
+  margin-left: 6px;
+}
+
+.notification__menu,
+.message__menu {
+  .circle__images {
+    margin-right: 20px;
+    width: 48px;
+    height: 48px;
+    border-radius: 50%;
+  }
+  .circle__info {
+    line-height: 18px;
+  }
+}
+
+.icons-color::before {
+  color: #ef6c00;
 }
 
 .header__menu {
@@ -927,7 +1208,7 @@ button.icon-unsorted {
       @include f500;
       color: $bg;
     }
-    &::before{
+    &::before {
       font-size: 16px;
       color: $green;
       position: absolute;
@@ -935,9 +1216,9 @@ button.icon-unsorted {
       top: 0;
     }
   }
-  .icon-comment-o{
+  .icon-comment-o {
     padding-right: 30px;
-    &::before{
+    &::before {
       top: -2px;
     }
   }
@@ -946,7 +1227,7 @@ button.icon-unsorted {
 .product__item {
   &.list {
     max-width: 100%;
-    &:hover{
+    &:hover {
       box-shadow: 0 16px 20px rgba(216, 216, 216, 0.75);
     }
     .product__item-img {
