--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,10 @@
 
 /* Header
 ================================= */
+.header{
+  background-color: #fff;
+}
+
 
 .header__top-inner {
   display: flex;
@@ -90,6 +94,7 @@
 }
 
 .basket {
+  margin-right: 20px;
   span {
     background-color: #95c85a;
   }
@@ -107,7 +112,6 @@
 }
 
 .user {
-  margin-left: 20px;
   margin-right: 25px;
   padding-right: 20px;
   position: relative;
