--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1982,6 +1982,97 @@ button.icon-unsorted {
     padding: 16px 0;
   }
 }
+
+/* SETTINGS
+================================= */
+.settings {
+  padding-bottom: 100px;
+}
+
+.product-one__tabs.settings__tabs {
+  display: flex;
+  .tabs {
+    display: block;
+    max-width: 270px;
+    width: 100%;
+    height: 100%;
+    margin-right: 30px;
+    border-bottom: none;
+    text-align: left;
+    span {
+      display: block;
+      background-color: #fff;
+      border-bottom: 1px solid #d7d7d7;
+      padding: 17px 17px 17px 50px;
+      color: #707070;
+      font-size: 14px;
+      @include f500;
+      &.active {
+        color: #37474f;
+        border-bottom: 1px solid $green;
+        &::before {
+          color: $green;
+        }
+      }
+      &::before {
+        left: 24px;
+        color: #444444;
+      }
+    }
+  }
+  .tab_content {
+    width: 100%;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+  }
+}
+
+.page-box {
+  background-color: #fff;
+  border: 1px solid #dedede;
+}
+.page-box__title {
+  border-bottom: 1px solid #dedede;
+  padding: 18px 34px;
+  font-size: 24px;
+  @include f500;
+  color: $bg;
+}
+.page-box__content {
+  padding: 30px 35px 80px;
+}
+
+.settings__line {
+  margin-bottom: 21px;
+  display: flex;
+  align-items: center;
+  label {
+    width: 260px;
+    color: #444444;
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+  }
+  input {
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #d7d7d7;
+    background-color: #f9f9f9;
+    color: #222222;
+    padding: 0 10px;
+  }
+  select{
+    max-width: 540px;
+    width: 100%;
+    height: 40px;
+    border: 1px solid #d7d7d7;
+    background-color: #f9f9f9;
+    color: #707070;
+    padding: 0 10px;
+  }
+}
 /* Media-Adaptiv 
 ==========================*/
 @import "media";
