--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2063,7 +2063,7 @@ button.icon-unsorted {
     color: #222222;
     padding: 0 10px;
   }
-  select{
+  select {
     max-width: 540px;
     width: 100%;
     height: 40px;
@@ -2073,6 +2073,213 @@ button.icon-unsorted {
     padding: 0 10px;
   }
 }
+
+/* Profile
+==========================*/
+
+.profile__inner {
+  display: flex;
+  margin-bottom: 30px;
+}
+
+.profile__aside {
+  margin-right: 30px;
+  max-width: 270px;
+  width: 100%;
+  &.footer__social-link {
+    margin-bottom: 30px;
+  }
+}
+
+.profile__content {
+  width: 100%;
+}
+
+.profile-status {
+  padding: 6px 9px 5px 30px;
+  color: #707070;
+  border: 1px solid #d6d6d6;
+  position: relative;
+  &::before {
+    position: absolute;
+    content: "";
+    width: 9px;
+    height: 9px;
+    background-color: #8bbe44;
+    border-radius: 50%;
+    top: 12px;
+    left: 11px;
+  }
+}
+
+.profile-on {
+  &::before {
+    background-color: $green;
+  }
+}
+
+.profile-off {
+  &::before {
+    background-color: $red;
+  }
+}
+
+.profile__aside-btn {
+  margin-bottom: 13px;
+  text-align: center;
+}
+.profile__aside-message {
+  margin-bottom: 17px;
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  color: white;
+  @include f500;
+  padding: 18px 10px;
+  box-shadow: 0 1px 2px rgba(69, 90, 100, 0.75);
+  background-color: #546e7a;
+  position: relative;
+  &::before {
+    position: absolute;
+    content: "\f003";
+    font-family: "icomoon";
+    top: 17px;
+    left: 50px;
+  }
+}
+.profile__aside-following {
+  margin-bottom: 17px;
+  display: block;
+  width: 100%;
+  font-size: 16px;
+  color: white;
+  @include f700;
+  background-color: $green;
+  box-shadow: 0 1px 2px rgba(69, 90, 100, 0.75);
+  padding: 18px 10px;
+}
+
+.profile__banner {
+  padding: 20px;
+  width: 869px;
+  height: 368px;
+  border: 1px solid #d7d7d7;
+  background-color: #ffffff;
+  margin-bottom: 35px;
+}
+.profile__banner-images {
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  min-height: 332px;
+}
+.profile__items {
+  display: flex;
+  border: 1px solid #d7d7d7;
+}
+.profile__item {
+  width: 25%;
+  text-align: center;
+  background-color: #fff;
+  padding: 20px 5px 17px;
+  & + .profile__item {
+    border-left: 1px solid #d7d7d7;
+  }
+}
+.profile__item-title {
+  color: #263238;
+  font-weight: 500;
+}
+.profile__item-content {
+  color: #707070;
+  font-weight: normal;
+  &.profile__item-sales {
+    color: $bg;
+    font-weight: 500;
+  }
+}
+
+.profile-settings {
+  .product-one__tabs.settings__tabs {
+    .tabs span {
+      font-family: "Roboto", sans-serif !important;
+      font-weight: 500;
+      color: #707070;
+      position: relative;
+      &.active::before{
+        color: $green;
+      }
+      &::before {
+        position: absolute;
+        font-family: "icomoon";
+        color: #d0d0d0;
+        font-size: 14px;
+        top: 15px;
+        left: 27px;
+      }
+    }
+  }
+}
+
+.personal-box {
+  background-color: #fff;
+  padding: 35px 40px 25px;
+  border: 1px solid #d7d7d7;
+}
+
+.personal-box {
+}
+.personal-box__title {
+  color: #263238;
+  font-family: "Roboto", sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 25px;
+}
+.personal-box__text {
+  margin-bottom: 20px;
+  p {
+    color: #707070;
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+}
+.personal-box__items {
+}
+.personal-box__item {
+}
+.personal-box__item-head {
+  display: flex;
+  justify-content: space-between;
+}
+.personal-box__item-name {
+  color: #263238;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+}
+.personal-box__item-number {
+  color: #263238;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+}
+.personal-box__item-line {
+  height: 15px;
+  border-radius: 3px;
+  background-color: #f4f4f4;
+  margin-bottom: 23px;
+  span {
+    display: block;
+    height: 15px;
+    border-radius: 3px;
+    background-image: url(../images/pro-bar.png);
+    background-repeat: repeat;
+  }
+}
+
 /* Media-Adaptiv 
 ==========================*/
 @import "media";
