--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2325,9 +2325,6 @@ button.icon-unsorted {
     span {
       color: $green;
     }
-    &::placeholder {
-      color: #707070;
-    }
   }
   select,
   input,
@@ -2338,6 +2335,9 @@ button.icon-unsorted {
     background-color: #f9f9f9;
     height: 40px;
     padding: 0 18px;
+    &::placeholder {
+      color: #707070;
+    }
   }
 
   textarea {
@@ -2346,7 +2346,7 @@ button.icon-unsorted {
     padding: 8px 18px;
   }
 
-  input[type='file']{
+  input[type="file"] {
     outline: none;
   }
 
@@ -2389,7 +2389,7 @@ button.icon-unsorted {
     background: #fff;
     box-shadow: none;
     text-shadow: none;
-}
+  }
 
   .jq-selectbox {
     width: 100%;
@@ -2421,6 +2421,143 @@ button.icon-unsorted {
     border-left: none;
   }
 }
+
+/* Withdrawals
+================================= */
+
+.withdrawals__inner {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 110px;
+}
+.withdrawals__col {
+  max-width: 570px;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  border: 1px solid #d7d7d7;
+}
+
+.withdrawals__title {
+  color: #263238;
+  font-family: "Roboto", sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  padding: 18px 32px 24px;
+  margin-bottom: 30px;
+  border-bottom: 1px solid #d7d7d7;
+}
+.withdrawals__content {
+  padding-left: 35px;
+  padding-right: 40px;
+  button {
+    color: #ffffff;
+    font-family: "Roboto", sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    background-color: #8bc34a;
+    border: none;
+    padding: 15px 36px;
+    cursor: pointer;
+    margin-bottom: 50px;
+  }
+}
+.withdrawals__form-line {
+  margin-bottom: 25px;
+  label {
+    display: block;
+    width: 100%;
+    color: #263238;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    margin-bottom: 15px;
+    span {
+      color: $green;
+    }
+  }
+  input,
+  select {
+    width: 100%;
+    display: block;
+    border: 1px solid #d7d7d7;
+    background-color: #f9f9f9;
+    height: 40px;
+    padding: 0 18px;
+    &::placeholder {
+      color: #707070;
+    }
+  }
+  .jq-selectbox {
+    width: 100%;
+  }
+  .jq-selectbox__select {
+    height: 40px;
+    padding: 0 18px;
+    border: 1px solid #d7d7d7;
+    border-bottom-color: #d7d7d7;
+    border-radius: 0;
+    background: #f9f9f9;
+    box-shadow: none;
+    font-family: "Roboto", sans-serif;
+    color: #707070;
+    text-shadow: none;
+    line-height: 40px;
+  }
+  .jq-selectbox__trigger-arrow {
+    border: none;
+    top: 0;
+    right: 20px;
+    font-size: 15px;
+    &::before {
+      content: "\f0d7";
+      font-family: "icomoon";
+    }
+  }
+  .jq-selectbox__trigger {
+    border-left: none;
+  }
+}
+.withdrawals__content-items {
+  padding-bottom: 35px;
+}
+.withdrawals__content-item {
+  display: flex;
+  height: 42px;
+  align-items: center;
+  font-size: 13px;
+  color: #444;
+  &:nth-child(odd){
+    background-color: #f9f9f9;
+  }
+}
+.withdrawals__content-date {
+  width: 154px;
+  padding-left: 20px;
+  @include f500;
+}
+.withdrawals__content-email {
+  width: 180px;
+  @include f500;
+  
+}
+.withdrawals__content-price {
+  width: 70px;
+  @include f700;
+}
+
+.withdrawals__content-status {
+  width: 88px;
+  @include f700;
+  &.withdrawals__content-pending{
+
+  }
+  &.withdrawals__content-paid {
+    color: $green;
+
+  }
+}
+
 
 /* Media-Adaptiv 
 ==========================*/
