--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -90,6 +90,8 @@ body {
 .breadcrumbs {
   &__inner {
     padding: 45px 0px 40px;
+    overflow: hidden;
+    width: 1200px;
   }
   &__list {
     li {
@@ -128,4 +130,8 @@ body {
     font-size: 14px;
     left: 0;
   }
+}
+
+#modal{
+  display: none;
 }
