--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1,4 +1,89 @@
+@media (max-width: 1900px) {
+  .product-slider__inner {
+    text-align: center;
+  }
+  .product__item-category {
+    text-align: left;
+  }
+}
+
+@media (max-width: 1440px) {
+  .product__item {
+    max-width: 560px;
+  }
+}
+
+@media (max-width: 1400px) {
+  .product .product__item {
+    flex-basis: calc(33.333% - 30px);
+  }
+}
+
+@media (max-width: 1225px) {
+  .product__item {
+    max-width: 350px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .withdrawals__inner {
+    display: block;
+  }
+  .withdrawals__col {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+  .withdrawals__content-item {
+    max-width: 490px;
+  }
+  .contact__form-row {
+    display: block;
+  }
+  .contact__form input {
+    max-width: 100%;
+  }
+  .productmini {
+    max-width: 48%;
+  }
+  .product-one__inner {
+    display: block;
+    .aside__item {
+      width: 100%;
+    }
+  }
+  .product-one__content {
+    max-width: 100%;
+    margin-right: 0;
+  }
+  .product-one__images {
+    max-width: 100%;
+  }
+  .product-page__inner {
+    display: block;
+    .aside__item {
+      width: 100%;
+    }
+  }
+  .top-sellers {
+    display: none;
+  }
+  .product-page__aside {
+    margin-right: 0;
+  }
+  .tutorial__item {
+    padding: 0 5px;
+  }
+}
+
 @media (max-width: 1150px) {
+  .product .product__item {
+    flex-basis: calc(50% - 30px);
+    max-width: 100%;
+  }
+
+  .product__item-img {
+    min-height: 225px;
+  }
   .footer__inner {
     flex-wrap: wrap;
   }
@@ -9,6 +94,28 @@
   }
   .header__text {
     display: none;
+  }
+}
+
+@media (max-width: 1020px) {
+  .tutorial__inner {
+    flex-wrap: wrap;
+    margin-left: -20px;
+  }
+  .tutorial__item {
+    padding: 0;
+    margin-left: 20px;
+    max-width: 100%;
+    flex-basis: calc(50% - 20px);
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 960px) {
+  .page-404__404::after {
+    width: 50px;
+    height: 97px;
+    background-size: cover;
   }
 }
 
@@ -25,6 +132,58 @@
     & + & {
       margin-left: 40px;
     }
+  }
+  .product-one__tabs.settings__tabs {
+    display: block;
+  }
+  .product-one__tabs.settings__tabs .tabs {
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+  .page-box__title {
+    padding: 18px 10px;
+  }
+  .page-box__content {
+    padding: 30px 10px 20px;
+  }
+  .contact__box {
+    display: block;
+  }
+  .profile__inner {
+    flex-direction: column;
+  }
+  .profile__content {
+    order: -1;
+    margin-bottom: 20px;
+  }
+  .profile__aside {
+    max-width: 100%;
+  }
+
+  .profile__aside-btn {
+    width: 300px;
+  }
+  .product-page__items {
+    margin-left: -20px;
+  }
+  .product-page__content .product__item {
+    flex-basis: calc(50% - 20px);
+    margin-left: 20px;
+    margin-bottom: 20px;
+  }
+  .product__item.list {
+    flex-basis: 100%;
+  }
+  .search__inner-title {
+    font-size: 35px;
+    line-height: 40px;
+  }
+  .advanatages__inner {
+    display: block;
+  }
+  .advanatages__item {
+    margin-bottom: 30px;
+    max-width: 100%;
   }
 }
 
@@ -49,7 +208,7 @@
       & + li {
         margin-left: 0;
       }
-      &:first-child{
+      &:first-child {
         border-top: 1px solid #fff;
       }
     }
@@ -65,6 +224,73 @@
       }
     }
   }
+  .upload-line {
+    display: block;
+  }
+  .upload-line label {
+    display: inline-block;
+    margin-bottom: 5px;
+  }
+  .upload__inner button {
+    margin-left: 0;
+  }
+  .product-one__box {
+    display: block;
+  }
+  .product-one__link {
+    margin-bottom: 20px;
+  }
+  .icon-th-list {
+    display: none;
+  }
+  .icon-th-large {
+    display: none;
+  }
+  .author {
+    min-height: 450px;
+  }
+}
+
+@media (max-width: 800px) {
+  .product__item {
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 740px) {
+  .page-404__404 {
+    font-size: 200px;
+    line-height: 200px;
+  }
+  .page-404__title {
+    font-size: 24px;
+    margin-bottom: 20px;
+    line-height: 30px;
+  }
+  .page-404__text {
+    font-size: 15px;
+    margin-bottom: 40px;
+  }
+  .page-404__link {
+    padding: 6px 14px;
+  }
+}
+
+@media (max-width: 700px) {
+  .product .product__item {
+    flex-basis: calc(100%);
+    max-width: 100%;
+  }
+  .author__box {
+    display: block;
+    padding: 50px 15px;
+    text-align: center;
+  }
+  .author__title {
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 20px;
+  }
 }
 
 @media (max-width: 640px) {
@@ -74,6 +300,116 @@
   }
   .circle__menu {
     right: auto;
+  }
+  .profile__banner-images {
+    min-height: 245px;
+  }
+  .profile__items {
+    display: block;
+  }
+  .profile__item {
+    width: 100%;
+  }
+  .profile__item + .profile__item {
+    border-left: none;
+    border-top: 1px solid #d7d7d7;
+  }
+  .profile__banner {
+    margin-bottom: 20px;
+  }
+  .productmini {
+    max-width: 100%;
+  }
+  .product-page__content .product__item {
+    flex-basis: 100%;
+    max-width: 100%;
+  }
+  .products__inner-btn button {
+    width: 100%;
+    & + button {
+      margin-left: 0;
+    }
+  }
+  .tutorial__item {
+    flex-basis: calc(100%);
+  }
+}
+
+@media (max-width: 600px) {
+  .page-404__inner {
+    padding: 0 15px;
+  }
+  .page-404__404 {
+    font-size: 120px;
+    line-height: 120px;
+  }
+  .page-404__404::after {
+    position: absolute;
+    content: "";
+    margin-left: 0;
+    top: 16px;
+    right: 0;
+  }
+  .upload__inner-content {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .upload__inner-title {
+    padding: 16px 10px 18px;
+  }
+  .settings__line {
+    display: block;
+    label {
+      display: inline-block;
+      margin-bottom: 10px;
+    }
+  }
+  .contact__head {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .contact__inner {
+    padding: 35px 10px 15px;
+  }
+  .container {
+    padding: 0 8px;
+  }
+  .contact__map iframe {
+    width: 100%;
+    height: 300px;
+  }
+  .personal-box {
+    padding: 35px 10px 25px;
+  }
+  .profile__aside-btn {
+    width: 280px;
+  }
+  .product-one__tabs {
+    .tabs {
+      display: block;
+      .tab {
+        display: block;
+        & + .tab {
+          border-top: 1px solid #d7d7d7;
+        }
+      }
+    }
+  }
+  .tab-item__list {
+    column-count: 1;
+    column-gap: 0;
+  }
+  .product-one__link {
+    a {
+      width: 100%;
+      margin-bottom: 15px;
+      & + a {
+        margin-left: 0;
+      }
+    }
+  }
+  .product-one__images {
+    height: 300px;
   }
 }
 
@@ -88,6 +424,19 @@
       margin-top: 30px;
     }
   }
+  .withdrawals__content {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .withdrawals__content-items {
+    overflow-x: scroll;
+    &.withdrawals__content-item {
+      margin: 0 auto;
+    }
+  }
+  .withdrawals__content-item {
+    min-width: 490px;
+  }
 }
 
 @media (max-width: 520px) {
@@ -95,7 +444,7 @@
     position: relative;
   }
 
-  .menu__list{
+  .menu__list {
     top: 70px;
   }
 
@@ -123,7 +472,7 @@
     left: 100%;
     right: -100%;
     z-index: 2;
-    background-color:white;
+    background-color: white;
     height: 70px;
     &.active {
       left: 70px;
@@ -150,6 +499,12 @@
   .user__menu {
     top: 59px;
   }
+  .creat-acc {
+    width: 100%;
+  }
+  .login__wrapper button {
+    width: 100%;
+  }
 }
 
 @media (max-width: 495px) {
@@ -158,6 +513,20 @@
   }
   .user__images {
     margin-right: 0;
+  }
+  .about__head {
+    padding: 23px 10px;
+  }
+  .about__inner {
+    padding: 0 10px;
+  }
+  .product-slider .slick-dots li button {
+    width: 13px;
+    height: 13px;
+  }
+  .product-slider .slick-dots li {
+    margin-left: 2px;
+    margin-right: 2px;
   }
 }
 
@@ -171,16 +540,22 @@
     margin-left: 0;
   }
 
-  .menu__btn{
+  .menu__btn {
     left: 10px;
+  }
+  #modal {
+    padding: 44px 10px;
+  }
+  .lost-pass{
+    font-size: 15px;
   }
 }
 
 @media (max-width: 360px) {
-  .basket{
+  .basket {
     margin-right: 10px;
   }
- 
+
   .user {
     margin-right: 0;
   }
