--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -439,7 +439,8 @@
   text-align: center;
   background-color: #76ae36;
   width: 246px;
-  padding: 15px 0 15px 28px;
+  padding: 12px 0 14px 28px;
+  margin-top: 19px;
   display: inline-block;
   position: relative;
   &::before {
@@ -539,6 +540,12 @@
   background-color: $grey;
 }
 
+.product__wrapper,
+.product-slider__wrapper {
+  max-width: 1920px;
+  margin: 0 auto;
+}
+
 .products__inner-btn {
   text-align: center;
   margin-bottom: 60px;
@@ -561,10 +568,15 @@
 
 .products__inner-box {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  margin-left: -30px;
   flex-wrap: wrap;
 }
 
+.product .product__item {
+  flex-basis: calc(25% - 30px);
+  margin-left: 30px;
+}
 .product__item {
   max-width: 442px;
   width: 100%;
@@ -679,6 +691,7 @@
         cursor: pointer;
         outline: none;
         color: transparent;
+        border: none;
       }
     }
   }
@@ -1249,9 +1262,10 @@ button.icon-unsorted {
 
 .product-page__content {
   .product__item {
-    max-width: 270px;
+    flex-basis: calc(33.333% - 30px);
     background-color: #fff;
     transition: all 0.5s;
+    margin-left: 30px;
   }
   .product__item-img {
     min-height: 180px;
@@ -1276,16 +1290,17 @@ button.icon-unsorted {
 
 .product-page__items {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-wrap: wrap;
   margin-bottom: 30px;
+  margin-left: -30px;
 }
 
 .pagination__list {
   li {
     display: inline-block;
     & + li {
-      margin-left: 30px;
+      margin-left: 10px;
     }
   }
   a,
@@ -1350,6 +1365,7 @@ button.icon-unsorted {
 .product__item {
   &.list {
     max-width: 100%;
+    flex-basis: 100%;
     &:hover {
       box-shadow: 0 16px 20px rgba(216, 216, 216, 0.75);
     }
@@ -1410,10 +1426,11 @@ button.icon-unsorted {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 16px 0;
+  padding: 16px;
 }
 .product-one__images {
-  width: 829px;
+  max-width: 829px;
+  width: 100%;
   height: 422px;
   background-position: center;
   background-repeat: no-repeat;
@@ -1505,10 +1522,10 @@ button.icon-unsorted {
 .tabs {
   display: flex;
   text-align: center;
+  border: 1px solid #d7d7d7;
   .tab {
     width: 100%;
     background-color: #fff;
-    border: 1px solid #d7d7d7;
     color: #70838d;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
@@ -1541,7 +1558,7 @@ button.icon-unsorted {
   font-weight: 400;
   line-height: 36px;
   column-count: 2;
-  column-gap: 25px☺;
+  column-gap: 25px;
   li {
     max-width: 270px;
     width: 100%;
@@ -2073,6 +2090,19 @@ button.icon-unsorted {
     padding: 0 10px;
   }
 }
+.jq-selectbox__select {
+  border: 1px solid #d7d7d7;
+  border-bottom-color: #d7d7d7;
+  border-radius: 0;
+  background: #f9f9f9;
+  box-shadow: none;
+  font-family: "Roboto", sans-serif;
+  color: #707070;
+  text-shadow: none;
+}
+.jq-selectbox {
+  width: 100%;
+}
 
 /* Profile
 ==========================*/
@@ -2161,8 +2191,8 @@ button.icon-unsorted {
 
 .profile__banner {
   padding: 20px;
-  width: 869px;
-  height: 368px;
+  max-width: 869px;
+  max-height: 368px;
   border: 1px solid #d7d7d7;
   background-color: #ffffff;
   margin-bottom: 35px;
@@ -2274,12 +2304,19 @@ button.icon-unsorted {
     background-repeat: repeat;
   }
 }
+.jq-selectbox__select {
+  border: 1px solid #d7d7d7;
+  border-bottom-color: #d7d7d7;
+  border-radius: 0;
+  background: #f9f9f9;
+  box-shadow: none;
+  font-family: "Roboto", sans-serif;
+  color: #707070;
+  text-shadow: none;
+}
 
 /* Upload
 ==========================*/
-
-.upload {
-}
 
 .upload__inner {
   background-color: #fff;
@@ -2527,7 +2564,7 @@ button.icon-unsorted {
   align-items: center;
   font-size: 13px;
   color: #444;
-  &:nth-child(odd){
+  &:nth-child(odd) {
     background-color: #f9f9f9;
   }
 }
@@ -2539,7 +2576,6 @@ button.icon-unsorted {
 .withdrawals__content-email {
   width: 180px;
   @include f500;
-  
 }
 .withdrawals__content-price {
   width: 70px;
@@ -2552,10 +2588,8 @@ button.icon-unsorted {
 
   &.withdrawals__content-paid {
     color: $green;
-
   }
 }
-
 
 /* Media-Adaptiv 
 ==========================*/
